fix: Update meta tags to use new domain

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="description" content="글로우로드 마케팅 - 디지털 마케팅 전문 기업. 카페/커뮤니티 바이럴, 플레이스/스토어 마케팅, 최적화 검색 마케팅 서비스를 제공합니다.">
     <meta name="keywords" content="글로우로드, 디지털마케팅, 바이럴마케팅, 카페마케팅, 커뮤니티마케팅, 플레이스마케팅, 스토어마케팅, 검색최적화">
     <meta name="author" content="글로우로드 마케팅">
+    <meta name="naver-site-verification" content="762003c68ea1957994bc016adc5ff3e51b80f9ad" />
     <meta property="og:title" content="글로우로드 마케팅 - 디지털 마케팅 전문 기업">
     <meta property="og:description" content="효과적인 디지털 마케팅 솔루션을 제공하는 글로우로드 마케팅입니다. 카페/커뮤니티 바이럴, 플레이스/스토어 마케팅, 검색 최적화 서비스를 만나보세요.">
-    <meta property="og:image" content="images/og-image.jpg">
-    <meta property="og:url" content="https://pss0702.github.io/glowroad-marketing/">
+    <meta property="og:image" content="https://glowroadad.com/images/og-image.jpg">
+    <meta property="og:url" content="https://glowroadad.com/">
     <title>글로우로드 마케팅 | 디지털 마케팅 전문 기업</title>
-    <link rel="canonical" href="https://pss0702.github.io/glowroad-marketing/">
+    <link rel="canonical" href="https://glowroadad.com/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
