--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <div class="service-content">
                 <div class="seo-header">
                     <h2 class="seo-title">최적화 검색 마케팅</h2>
-                    <p class="seo-subtitle">검색시 상단을 차지하는 마케팅으로 즉발적인 효과를 볼 수 있습니다.<br>검색량이 있는 키워드라면 어떤 업직종이든 효과가 있는 마케팅</p>
+                    <p class="seo-subtitle">검색 시 효과적인 마케팅으로 비즈니스 성장을 도와드립니다.<br>검색량이 있는 키워드라면 어떤 업직종이든 효과적인 마케팅 솔루션을 제공합니다.</p>
                 </div>
                 <div class="seo-examples">
                     <div class="example-image full-width">
@@ -441,8 +441,8 @@
                             <i class="fas fa-search"></i>
                         </div>
                         <div class="reason-content">
-                            <h3>검색 상단 마케팅</h3>
-                            <p>상단에 위치하여 많은 트래픽을<br>유도 합니다.</p>
+                            <h3>검색 마케팅</h3>
+                            <p>효과적인 위치에서 많은 트래픽을<br>유도합니다.</p>
                         </div>
                     </div>
                     <div class="reason-card">
@@ -450,8 +450,8 @@
                             <i class="fas fa-users"></i>
                         </div>
                         <div class="reason-content">
-                            <h3>즉발적인 트래픽</h3>
-                            <p>상단에 있기에 바로 트래픽이 발생되어<br>매출로 전환이 가능합니다.</p>
+                            <h3>효과적인 트래픽</h3>
+                            <p>적절한 위치에서 트래픽이 발생하여<br>매출로 전환이 가능합니다.</p>
                         </div>
                     </div>
                     <div class="reason-card">
@@ -509,8 +509,8 @@
                     <div class="pricing-container">
                         <div class="pricing-card">
                             <div class="pricing-header">
-                                <h3>검색상단 관리상품</h3>
-                                <p>목표키워드를 검색상단으로<br>발행 하는 상품 입니다.</p>
+                                <h3>검색 마케팅 관리상품</h3>
+                                <p>목표키워드를 효과적으로<br>관리하는 상품입니다.</p>
                             </div>
                             <div class="pricing-content">
                                 <div class="price-item">
