feat: Add video background to hero section

--- a/index.html
+++ b/index.html
@@ -45,16 +45,22 @@
 
     <main>
         <!-- 히어로 섹션 -->
-        <section class="hero" id="home">
+        <section class="hero">
+            <div class="video-background">
+                <video autoplay muted loop playsinline>
+                    <source src="히어로섹션영상.mp4" type="video/mp4">
+                </video>
+                <div class="video-overlay"></div>
+            </div>
             <div class="hero-content">
                 <p class="company-name">글로우로드 마케팅</p>
                 <h1>클라이언트의 성장이 곧<br>우리의 성장이다.</h1>
                 <p>함께 성장하는 마케팅 파트너, 글로우로드</p>
-                <div class="service-tags">
-                    <a href="#viral" class="service-tag"># 카페/커뮤니티 바이럴</a>
-                    <a href="#place" class="service-tag"># 플레이스/스토어</a>
-                    <a href="#seo" class="service-tag"># 최적화 검색</a>
-                    <a href="#contact" class="service-tag"># 상담문의</a>
+                <div class="hero-tags">
+                    <span class="tag"># 키워드/커뮤니티 바이럴</span>
+                    <span class="tag"># 블로이/스토어</span>
+                    <span class="tag"># 최적화 검색</span>
+                    <span class="tag"># 상담문의</span>
                 </div>
             </div>
         </section>
