--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="hero">
             <div class="video-background">
                 <video autoplay muted loop playsinline>
-                    <source src="히어로섹션영상.mp4" type="video/mp4">
+                    <source src="videos/히어로섹션영상.mp4" type="video/mp4">
                 </video>
                 <div class="video-overlay"></div>
             </div>
