fix: Update hero section tag texts

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <h1>클라이언트의 성장이 곧<br>우리의 성장이다.</h1>
                 <p>함께 성장하는 마케팅 파트너, 글로우로드</p>
                 <div class="hero-tags">
-                    <span class="tag"># 키워드/커뮤니티 바이럴</span>
-                    <span class="tag"># 블로이/스토어</span>
+                    <span class="tag"># 카페/커뮤니티 바이럴</span>
+                    <span class="tag"># 플레이스/스토어</span>
                     <span class="tag"># 최적화 검색</span>
                     <span class="tag"># 상담문의</span>
                 </div>
