fix: Update hero tags text color to white

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <main>
         <!-- 히어로 섹션 -->
-        <section class="hero">
+        <section class="hero" id="home">
             <div class="video-background">
                 <video autoplay muted loop playsinline>
                     <source src="videos/히어로섹션영상.mp4" type="video/mp4">
@@ -57,10 +57,10 @@
                 <h1>클라이언트의 성장이 곧<br>우리의 성장이다.</h1>
                 <p>함께 성장하는 마케팅 파트너, 글로우로드</p>
                 <div class="hero-tags">
-                    <span class="tag"># 카페/커뮤니티 바이럴</span>
-                    <span class="tag"># 플레이스/스토어</span>
-                    <span class="tag"># 최적화 검색</span>
-                    <span class="tag"># 상담문의</span>
+                    <a href="#viral" class="tag"># 카페/커뮤니티 바이럴</a>
+                    <a href="#place" class="tag"># 플레이스/스토어</a>
+                    <a href="#seo" class="tag"># 최적화 검색</a>
+                    <a href="http://pf.kakao.com/_xaidxfn/chat" class="tag"># 상담문의</a>
                 </div>
             </div>
         </section>
