--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
             </div>
         </section>
 
+        <!-- 고민 해결 섹션 -->
+        <section class="pain-points">
+            <h2>혹시 이런 고민, 하고 계신가요?</h2>
+            <div class="pain-points-container">
+                <div class="pain-point">
+                    <div class="icon-wrapper">
+                        <i class="fas fa-chart-line fa-flip-vertical"></i>
+                    </div>
+                    <p>제품은 좋은데 홍보를 못해서<br>매출이 안나와요</p>
+                </div>
+                <div class="pain-point">
+                    <div class="icon-wrapper">
+                        <i class="fas fa-coins"></i>
+                    </div>
+                    <p>광고비는 쓰고 있는데<br>성과가 없어요</p>
+                </div>
+                <div class="pain-point">
+                    <div class="icon-wrapper">
+                        <i class="fas fa-compass"></i>
+                    </div>
+                    <p>어디서부터 마케팅을<br>해야할지 몰라요</p>
+                </div>
+                <div class="pain-point">
+                    <div class="icon-wrapper">
+                        <i class="fas fa-handshake"></i>
+                    </div>
+                    <p>믿고 맡길만한 대행사를<br>못찾았어요</p>
+                </div>
+            </div>
+        </section>
+
         <!-- 특장점 섹션 -->
         <section class="features" id="features">
             <h2 class="section-title">글로우로드 마케팅의 4가지 목표</h2>
@@ -94,37 +125,6 @@
                     </div>
                     <h3>광고 채널 통합 운영</h3>
                     <p>블로그, 카페, 인스타, 플레이스까지<br>한번에 운영 가능</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- 고민 해결 섹션 -->
-        <section class="pain-points">
-            <h2>혹시 이런 고민, 하고 계신가요?</h2>
-            <div class="pain-points-container">
-                <div class="pain-point">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-chart-line fa-flip-vertical"></i>
-                    </div>
-                    <p>제품은 좋은데 홍보를 못해서<br>매출이 안나와요</p>
-                </div>
-                <div class="pain-point">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-coins"></i>
-                    </div>
-                    <p>광고비는 쓰고 있는데<br>성과가 없어요</p>
-                </div>
-                <div class="pain-point">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-compass"></i>
-                    </div>
-                    <p>어디서부터 마케팅을<br>해야할지 몰라요</p>
-                </div>
-                <div class="pain-point">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-handshake"></i>
-                    </div>
-                    <p>믿고 맡길만한 대행사를<br>못찾았어요</p>
                 </div>
             </div>
         </section>
@@ -435,56 +435,48 @@
         <!-- 성과/포트폴리오 섹션 -->
         <section id="portfolio" class="portfolio-section">
             <div class="section-content">
-                <h2 class="section-title">성공 사례</h2>
-                <div class="portfolio-filters">
-                    <button class="filter-btn active" data-filter="all">전체</button>
-                    <button class="filter-btn" data-filter="viral">카페/커뮤니티</button>
-                    <button class="filter-btn" data-filter="place">플레이스/스토어</button>
-                </div>
+                <h2 class="section-title">글로우로드 마케팅 후기</h2>
                 <div class="portfolio-grid">
-                    <div class="portfolio-item" data-category="viral">
-                        <div class="portfolio-image">
-                            <img src="images/portfolio-placeholder.jpg" alt="성공 사례 1">
-                        </div>
+                    <!-- 성공 사례 1 -->
+                    <div class="portfolio-item">
+                        <img src="images/성공사례1.jpg" alt="카페 바이럴 후기" class="portfolio-image">
                         <div class="portfolio-content">
-                            <h3>카페 바이럴 마케팅 성공 사례</h3>
-                            <div class="portfolio-stats">
-                                <div class="stat-item">
-                                    <span class="stat-label">매출 증가</span>
-                                    <span class="stat-value">200%</span>
+                            <h3>카페 바이럴 후기</h3>
+                            <div class="metrics-container">
+                                <div class="metric">
+                                    <span class="metric-value">500%</span>
+                                    <span class="metric-label">매출 증가</span>
                                 </div>
-                                <div class="stat-item">
-                                    <span class="stat-label">방문자 증가</span>
-                                    <span class="stat-value">300%</span>
+                                <div class="metric">
+                                    <span class="metric-value">600%</span>
+                                    <span class="metric-label">방문자 증가</span>
                                 </div>
                             </div>
-                            <p class="portfolio-description">카페의 특별한 메뉴와 분위기를 효과적으로 전달하여 매출과 방문자 수를 크게 증가시켰습니다.</p>
-                            <div class="client-review">
-                                <p>"예상보다 훨씬 좋은 결과를 얻었습니다. 특히 젊은 층의 방문이 크게 늘었어요."</p>
-                                <span class="client-name">- A카페 대표</span>
+                            <div class="testimonial">
+                                <p class="quote">"깜짝 놀랐어요 .. 처음에는 매출좀 더 나오게 해볼까 하는 마음으로 한거였는데
+                                실질적으로 순위까지 올라가게 되면서 아직도 점점 우상향 하고 있어요"</p>
+                                <p class="author">- A카페 대표</p>
                             </div>
                         </div>
                     </div>
-                    <div class="portfolio-item" data-category="place">
-                        <div class="portfolio-image">
-                            <img src="images/portfolio-placeholder.jpg" alt="성공 사례 2">
-                        </div>
+                    <!-- 성공 사례 2 -->
+                    <div class="portfolio-item">
+                        <img src="images/성공사례2.jpg" alt="스토어 관리 마케팅 후기" class="portfolio-image">
                         <div class="portfolio-content">
-                            <h3>스토어 플레이스 마케팅 성공 사례</h3>
-                            <div class="portfolio-stats">
-                                <div class="stat-item">
-                                    <span class="stat-label">예약 증가</span>
-                                    <span class="stat-value">150%</span>
+                            <h3>스토어 관리 마케팅 후기</h3>
+                            <div class="metrics-container">
+                                <div class="metric">
+                                    <span class="metric-value">200%</span>
+                                    <span class="metric-label">매출 증가</span>
                                 </div>
-                                <div class="stat-item">
-                                    <span class="stat-label">리뷰 증가</span>
-                                    <span class="stat-value">250%</span>
+                                <div class="metric">
+                                    <span class="metric-value">달성</span>
+                                    <span class="metric-label">프리미엄 등급</span>
                                 </div>
                             </div>
-                            <p class="portfolio-description">스토어의 특별한 서비스와 분위기를 효과적으로 전달하여 예약과 리뷰를 크게 증가시켰습니다.</p>
-                            <div class="client-review">
-                                <p>"고객들의 리뷰가 크게 늘어나고, 예약도 자연스럽게 늘어났습니다."</p>
-                                <span class="client-name">- B스토어 대표</span>
+                            <div class="testimonial">
+                                <p class="quote">"확실히 관리 받으니 매출도 늘고 구입건수도 늘어서 그동안 막혀 있던 프리미엄 등급이 됐어요 ~ 앞으로도 잘 부탁드려요"</p>
+                                <p class="author">- B스토어 대표</p>
                             </div>
                         </div>
                     </div>
