Initial commit: Add marketing insights blog

--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
     <header>
         <!-- 네비게이션 바 -->
         <nav class="navbar" role="navigation" aria-label="메인 메뉴">
-            <div class="logo">
-                <a href="#" aria-label="글로우로드 홈">
+            <div class="nav-content">
+                <a href="#" class="logo" aria-label="글로우로드 홈">
                     <img src="images/logo.png.png" alt="글로우로드 로고" width="120" height="40">
                 </a>
+                <button class="mobile-menu-btn">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <ul class="nav-links">
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
+                    <li><a href="#place">플레이스/스토어 마케팅</a></li>
+                    <li><a href="blog.html">마케팅 인사이트</a></li>
+                    <li><a href="http://pf.kakao.com/_xaidxfn/chat" class="contact-btn">문의하기</a></li>
+                </ul>
             </div>
-            <button class="mobile-menu-btn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <ul class="nav-links">
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
-                <li><a href="#place">플레이스/스토어 마케팅</a></li>
-                <li><a href="http://pf.kakao.com/_xaidxfn/chat" class="contact-btn">문의하기</a></li>
-            </ul>
         </nav>
     </header>
 
@@ -506,6 +507,7 @@
             <li><a href="#home">HOME</a></li>
             <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
             <li><a href="#place">플레이스/스토어 마케팅</a></li>
+            <li><a href="blog.html">마케팅 인사이트</a></li>
             <li><a href="http://pf.kakao.com/_xaidxfn/chat">문의하기</a></li>
         </ul>
     </div>
