--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="blog.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+    <style>
+        /* ... existing styles ... */
+        
+        #writeButton {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            cursor: pointer;
+            display: none; /* 기본적으로 숨김 */
+            z-index: 1000;
+            transition: all 0.3s ease;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #writeButton:hover {
+            transform: scale(1.1);
+            background-color: #0056b3;
+        }
+
+        #writeButton i {
+            font-size: 24px;
+        }
+    </style>
 </head>
 <body>
     <!-- 네비게이션 바 -->
@@ -18,7 +51,6 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">HOME</a></li>
-                <li><button id="adminLoginBtn" class="admin-btn" style="display: none;">관리자 로그인</button></li>
             </ul>
         </div>
     </nav>
@@ -47,7 +79,7 @@
             </div>
 
             <!-- 글쓰기 버튼 (관리자만 보임) -->
-            <div id="writeButtonContainer" class="write-button-container">
+            <div id="writeButtonContainer" class="write-button-container" style="display: none;">
                 <button id="writeBtn" class="write-btn">
                     <i class="fas fa-pen"></i>
                     글쓰기
@@ -56,23 +88,15 @@
         </div>
     </main>
 
-    <!-- 로그인 모달 -->
-    <div id="loginModal" class="modal">
-        <div class="modal-content">
-            <h2>관리자 로그인</h2>
-            <form id="loginForm">
-                <input type="email" id="loginEmail" placeholder="이메일" required>
-                <input type="password" id="loginPassword" placeholder="비밀번호" required>
-                <button type="submit">로그인</button>
-            </form>
-        </div>
-    </div>
+    <!-- 글쓰기 버튼 -->
+    <button id="writeButton" onclick="goToWrite()" title="새 글 작성">
+        <i class="fas fa-pen"></i>
+    </button>
 
     <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-storage-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     
     <!-- 앱 스크립트 -->
     <script src="firebase-config.js"></script>
