refactor: 마케팅 인사이트 메뉴 및 관련 기능 제거

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
 <body>
     <header>
         <!-- 네비게이션 바 -->
-        <nav class="navbar" role="navigation" aria-label="메인 메뉴">
+        <nav class="navbar">
             <div class="nav-content">
-                <a href="#" class="logo" aria-label="글로우로드 홈">
+                <a href="index.html" class="logo">
                     <img src="images/logo.png.png" alt="글로우로드 로고" width="120" height="40">
                 </a>
                 <button class="mobile-menu-btn">
@@ -36,7 +36,6 @@
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
                     <li><a href="#place">플레이스/스토어 마케팅</a></li>
-                    <li><a href="blog.html">마케팅 인사이트</a></li>
                     <li><a href="http://pf.kakao.com/_xaidxfn/chat" class="contact-btn">문의하기</a></li>
                 </ul>
             </div>
@@ -507,7 +506,6 @@
             <li><a href="#home">HOME</a></li>
             <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
             <li><a href="#place">플레이스/스토어 마케팅</a></li>
-            <li><a href="blog.html">마케팅 인사이트</a></li>
             <li><a href="http://pf.kakao.com/_xaidxfn/chat">문의하기</a></li>
         </ul>
     </div>
