문의하기 페이지 디자인 개선 및 불필요한 요소 제거

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
                     <li><a href="#place">플레이스/스토어 마케팅</a></li>
-                    <li><a href="http://pf.kakao.com/_xaidxfn/chat" class="contact-btn">문의하기</a></li>
+                    <li><a href="contact.html">문의하기</a></li>
                 </ul>
             </div>
         </nav>
@@ -487,12 +487,14 @@
         <!-- 문의하기 섹션 -->
         <section id="contact" class="contact-section">
             <div class="contact-content">
-                <h2>글로우로드와 함께<br>성장하는 마케팅을 시작하세요</h2>
-                <p class="contact-description">
-                    체계적이고 효과적인 마케팅 전략으로<br>
-                    귀사의 성공을 함께 만들어 가겠습니다
+                <h2 class="fade-in">매출상승의 지름길</h2>
+                <p class="contact-description fade-in">
+                    글로우로드 마케팅과 함께하세요
                 </p>
-                <a href="http://pf.kakao.com/_xaidxfn/chat" class="contact-btn">문의하기</a>
+                <a href="contact.html" class="contact-btn fade-in">
+                    <i class="fas fa-arrow-right"></i>
+                    문의하기
+                </a>
             </div>
         </section>
     </main>
@@ -506,7 +508,7 @@
             <li><a href="#home">HOME</a></li>
             <li><a href="#viral">카페/커뮤니티 바이럴</a></li>
             <li><a href="#place">플레이스/스토어 마케팅</a></li>
-            <li><a href="http://pf.kakao.com/_xaidxfn/chat">문의하기</a></li>
+            <li><a href="contact.html">문의하기</a></li>
         </ul>
     </div>
 
